paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/function_specifiers_2/sample_004/target.compile.log
error[E0689]: can't call method `wrapping_add` on ambiguous numeric type `{integer}`
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/function_specifiers_2/sample_004/target.rs:4:15
  |
4 |         x = x.wrapping_add(1);
  |               ^^^^^^^^^^^^
  |
help: you must specify a type for this binding, like `i32`
  |
2 |     let mut x: i32 = 0;
  |              +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0689`.